--- a/frontend/src/app/pages/components/card-cervejas/card-cervejas.component.css
+++ b/frontend/src/app/pages/components/card-cervejas/card-cervejas.component.css
@@ -2,76 +2,96 @@
 .container{
 }
 
-.form-inline{
-    display: flex;
-    flex-direction: row;
-    gap: 3rem;
-    height: 40px;
-    align-items: center;
-    justify-content: center;
+
+.cerveja-input{
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+  max-width: 99%;
 }
 
+.cerveja-input > input{
+  border-color: black;
+  border-radius: 3px;
+  padding: 4px;
+  font-size: 15px;
+  width: 80%;
+  height: 40px;
 
-.btn-buscar{
-    width: 100px;
-    height: 35px;
-    padding-left: 5px;
-    padding-right: 5px;
-    display: flex;
-    font-size: 18px;
-    text-decoration: none;
-    color: #000000;
-    border: 1px solid #575656;
-    letter-spacing: 1px;
-    align-items: center;
-    text-align: center;
-    position: relative;
-    justify-content: center;
-    transition: all .35s;
-    border-radius: 3px;
-    cursor: pointer;
-    background-color: rgb(0, 89, 255);
-    
-  }
-  
-  .btn-buscar > a{
-    color: white;
-    font-weight: 600;
-  }
-  
-  .btn-buscar > a span{
-    position: relative;
-    z-index: 2;
-  }
-  
-  .btn-buscar > a:after{
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background: white;
-    transition: all .35s;
-  }
-  
-  .btn-buscar > a:hover{
-    color: black;
-  }
-  
-  .btn-buscar > a:hover:after{
-    width: 100%;
-  }
+}
 
+.cerveja-buscar{
+    padding-right: 30px;
+}
 
+.cerveja-buscar > a{
+  display: flex;
+  width: 110px;
+  height: 35px;
+  line-height: 40px;
+  font-size: 18px;
+  font-family: sans-serif;
+  text-decoration: none;
+  color: #333;
+  border: 1px solid #333;
+  letter-spacing: 2px;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  justify-content: center;
+  transition: all .35s;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.cerveja-buscar > a span{
+  position: relative;
+  z-index: 2;
+}
+
+.cerveja-buscar > a:after{
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #510697;
+  transition: all .35s;
+}
+
+.cerveja-buscar > a:hover{
+  color: #fff;
+}
+
+.cerveja-buscar > a:hover:after{
+  width: 100%;
+}
+
+.container hr{
+  width: 100%;
+}
 
 .container-table{
     margin-top: 40px;
+    height: 100%;
+    margin-bottom: 80px;
+    border: 0.3px solid rgb(160, 158, 158);
+    border-radius: 3px;
+    
 }
 
 
 tbody > tr > td > img {
     height: 50px;
     width: auto;
-    justify-content: left;
+    max-width: 50px;
+    text-align: left;
+}
+
+.td_abv{
+  text-align: left;
 }
