--- a/frontend/src/app/pages/components/card-cervejas/card-cervejas.component.html
+++ b/frontend/src/app/pages/components/card-cervejas/card-cervejas.component.html
@@ -1,26 +1,33 @@
 <div class="container">
-  <form class="form-inline">
-    <input class="form-control" type="text" placeholder="Readonly input here…" >
-    <div class="btn-buscar"><a><span>BUSCAR</span></a></div>
-  </form>
-    <div class="container-table">
-        <table class="table table-striped">
-            <thead>
-              <tr>
-                <th (click)="ordenarPor('name')">Nome {{ ordemNome === 'asc' ? '▲' : '▼' }}</th>
-                <th (click)="ordenarPor('tipo')">Tipo {{ ordemTipo === 'asc' ? '▲' : '▼' }}</th>
-                <th >Imagem</th>
-                <th (click)="ordenarPor('abv')">% ABV {{ ordemABV === 'asc' ? '▲' : '▼' }}</th>
-              </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let cerveja of cervejas">
-                    <td>{{ cerveja.name }}</td>
-                    <td>{{ cerveja.tagline }}</td>
-                    <td><img [src]="cerveja.image_url" alt="{{ cerveja.image_url }}" width="50"></td>
-                    <td>{{ cerveja.abv }}</td>
-                  </tr>
-            </tbody>
-        </table>
+  <div class="cerveja-input">
+    <input type="text" [(ngModel)]="nameInput" placeholder="Digite um nome para buscar">
+    <div class="cerveja-buscar">
+      <a (click)="findName()"><span>BUSCAR</span></a>
     </div>
+  </div>
+
+  <div class="container-hr">
+    <hr/>
+  </div>
+
+  <div class="container-table">
+      <table class="table table-striped">
+          <thead>
+            <tr>
+              <th (click)="ordenarPor('name')">Nome {{ ordemNome === 'asc' ? '▲' : '▼' }}</th>
+              <th (click)="ordenarPor('tipo')">Tipo {{ ordemTipo === 'asc' ? '▲' : '▼' }}</th>
+              <th >Imagem</th>
+              <th (click)="ordenarPor('abv')">ABV {{ ordemABV === 'asc' ? '▲' : '▼' }}</th>
+            </tr>
+          </thead>
+          <tbody>
+              <tr *ngFor="let cerveja of cervejas">
+                  <td><a [routerLink]="['/cervejas',cerveja.id]">{{ cerveja.name }}</a></td>
+                  <td>{{ cerveja.tagline }}</td>
+                  <td class="td_img"><img [src]="cerveja.image_url" alt="{{ cerveja.image_url }}" width="50"></td>
+                  <td class="td_abv">{{ cerveja.abv }}</td>
+                </tr>
+          </tbody>
+      </table>
+  </div>
 </div>
